:sparkles: Add Contuniuing educaiton profiles page
Add a "Continuing Education" page. Add link to this page in the user
dropdown menu.
Redirected new registered users to this page.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@edx/frontend-component-cookie-policy-banner": "1.0.0",
     "@edx/paragon": "2.6.4",
     "@edx/studio-frontend": "^1.16.22",
+    "axios": "^0.20.0",
     "babel-core": "6.26.0",
     "babel-loader": "6.4.1",
     "babel-plugin-transform-class-properties": "6.24.1",
@@ -37,6 +38,7 @@
     "jquery-migrate": "1.4.1",
     "jquery.scrollto": "2.1.2",
     "js-cookie": "2.2.0",
+    "lodash": "^4.17.20",
     "moment": "2.19.3",
     "moment-timezone": "0.5.14",
     "node-sass": "4.12.0",
@@ -44,11 +46,12 @@
     "popper.js": "1.12.9",
     "prop-types": "15.6.0",
     "raw-loader": "0.5.1",
-    "react": "16.1.0",
-    "react-dom": "16.1.2",
+    "react": "16.8.0",
+    "react-dom": "16.8.2",
     "react-redux": "5.0.7",
     "react-router-dom": "5.1.2",
     "react-slick": "0.16.0",
+    "react-toasts": "^3.0.6",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "requirejs": "2.3.5",
