--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lodash": "^4.17.20",
     "moment": "2.19.3",
     "moment-timezone": "0.5.14",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.12.0",
     "picturefill": "3.0.2",
     "popper.js": "1.12.9",
     "prop-types": "15.6.0",
