--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "raw-loader": "0.5.1",
     "react": "16.8.0",
     "react-dom": "16.8.2",
+    "react-dual-listbox": "^2.0.0",
     "react-redux": "5.0.7",
     "react-router-dom": "5.1.2",
     "react-slick": "0.16.0",
